bk_ida/gccida/c2/save_call_clobbered_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:827:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:828:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:844:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:899:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82[66]; // [rsp+40h] [rbp-108h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:951:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641440); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:952:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v13 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:953:42: error: use of undeclared identifier 'xmm'
v14 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641420); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:954:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641450); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1000:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v26 = ( ( unsigned int)( mode_class_0[BYTE2( v25)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1038:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641450); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1039:42: error: use of undeclared identifier 'xmm'
v14 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641420); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1040:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v13 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1041:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641440); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1063:7: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v35 = ( __m128i)to; 
      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1066:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v38 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1073:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v41.m128i_i64[0] = v14.m128i_i64[0] << v40.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1073:23: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v41.m128i_i64[0] = v14.m128i_i64[0] << v40.m128i_i8[0]; 
                   ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1073:43: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v41.m128i_i64[0] = v14.m128i_i64[0] << v40.m128i_i8[0]; 
                                       ~~~^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/caller-save.c:1074:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v40.m128i_i64[0] = v14.m128i_i64[0] << v42.m128i_i8[0]; 
~~~^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/save_call_clobbered_regs/src/obj/caller-save.o] Error 1
